# OpenCV_Socket_Demo

./: CMakeLists.txt  README.md  client.cpp  main copy.cpp  main.cpp  test.cpp  testsocket  testsocket.cpp
include/: ClientSocket.h  ServerSocket.h  YOLO.h  add.h
src/: CMakeLists.txt  ClientSocket.cpp  ServerSocket.cpp  YOLO.cpp  add.cpp
